--- a/mac-provision.yml
+++ b/mac-provision.yml
@@ -42,6 +42,7 @@
       - cowsay
       - coreutils
       - jq
+      - jid
 
     # Tap external Homebrew Cask repositories.
     homebrew_cask_repositories:
