--- a/mac-provision.yml
+++ b/mac-provision.yml
@@ -44,6 +44,7 @@
       - jq
       - jid
       - mitmproxy
+      - pyenv
 
     # Tap external Homebrew Cask repositories.
     homebrew_cask_repositories:
